// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

option optimize_for = LITE_RUNTIME;

message ChromeFeedResponseMetadata {
  optional bool privacy_notice_fulfilled = 1;
  optional bool logging_enabled = 2;
  optional string session_id = 3;
  repeated Experiment experiments = 4;
  optional bool web_and_app_activity_enabled = 5;
  optional bool discover_personalization_enabled = 6;
}
message Experiment {
  optional string trial_name = 1;
  optional string group_name = 2;
  optional string experiment_id = 3;
}
